# multilayer-ff-network

./: .gitignore  AUTOENCODER_README.md  autoencoder.py  dataset.py  finetune_comparison.py  models.py  pyproject.toml  train.py  train_autoencoder.py  visualize_autoencoder.py  visualize_data.py
models/denoise_earlystop/lr0.001/e200/: autoencoder_xavier_relu_dims256_64_256_denoise0.1_earlystop_p10_bn.pth
models/denoise_earlystop/lr0.001/e250/: autoencoder_xavier_relu_dims256_64_256_denoise0.1_earlystop_p10_bn.pth
models/denoise_earlystop/lr0.01/e200/: autoencoder_xavier_relu_dims256_64_256_denoise0.1_earlystop_p10_bn.pth
models/denoise_earlystop/lr0.1/e200/: autoencoder_xavier_relu_dims256_64_256_denoise0.1_earlystop_p10_bn.pth
models/noreg/lr0.001/e100/: autoencoder_xavier_relu_bnTrue_lr0.001_e100_dims256_64_256_fl=2.0536607790596877.pth  autoencoder_xavier_relu_dims256_64_256.pth
models/noreg/lr0.001/e200/: autoencoder_xavier_relu_bnTrue_lr0.001_e200_dims256_64_256_fl=1.7011849729320672.pth
models/noreg/lr0.001/e220/: autoencoder_xavier_relu_bnTrue_lr0.001_e220_dims256_64_256_fl=1.6712237490883357.pth
models/noreg/lr0.001/e50/: autoencoder_xavier_relu_bnTrue_lr0.001_e50_dims256_64_256_fl=2.2074688552301143.pth  autoencoder_xavier_relu_dims256_64_256.pth
models/noreg/lr0.01/e100/: autoencoder_xavier_relu_bnTrue_lr0.01_e100_dims256_64_256_fl=1.8516624260552321.pth
models/noreg/lr0.01/e200/: autoencoder_xavier_relu_bnTrue_lr0.01_e200_dims256_64_256_fl=1.753868644750571.pth
(+2 files in other folders)
